force-app/main/default/objects/Booking_Form__c/fields/Secondary_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>In case the Organiser is unavailable</inlineHelpText>
    <label>Secondary Contact Person</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please add an Organiser Contact</errorMessage>
        <filterItems>
            <field>Contact.Organizer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Booking Forms (Secondary Contact Person)</relationshipLabel>
    <relationshipName>Booking_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>