force-app/main/default/objects/Booking_Form__c/fields/Sets__c.field-meta.xml
<CustomField>
    <fullName>Sets__c</fullName>
    <inlineHelpText>How many sets and the duration of the sets to be performed ? (As per contract)</inlineHelpText>
    <label>Sets</label>
    <type>TextArea</type>
</CustomField>