force-app/main/default/objects/Booking_Form__c/fields/SignButlerName__c.field-meta.xml
<CustomField>
    <fullName>SignButlerName__c</fullName>
    <description>This field is used by SignButler to name the signing requests</description>
    <formula>&apos;Contract - &apos;&amp;Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SignButlerName</label>
    <type>Text</type>
</CustomField>