force-app/main/default/objects/Booking_Form__c/fields/Sound_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Sound_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sound Engineer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select a Technical Contact as a Sound Engineer</errorMessage>
        <filterItems>
            <field>Contact.Technical__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Booking Forms (Sound Engineer)</relationshipLabel>
    <relationshipName>Booking_Forms_Sound</relationshipName>
    <type>Lookup</type>
</CustomField>