force-app/main/default/objects/Booking_Form__c/fields/Sound_supplied_by__c.field-meta.xml
<CustomField>
    <fullName>Sound_supplied_by__c</fullName>
    <label>Sound supplied by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kunstenaar</fullName>
            </value>
            <value>
                <fullName>Kliënt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>