force-app/main/default/objects/Booking_Form__c/fields/Sound_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Sound_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Technical company supplying the sound</description>
    <label>Sound Supplier</label>
    <referenceTo>Technical_Supplier__c</referenceTo>
    <relationshipLabel>Booking Forms (Sound)</relationshipLabel>
    <relationshipName>Booking_Forms_Sound</relationshipName>
    <type>Lookup</type>
</CustomField>