force-app/main/default/objects/Booking_Form__c/fields/Stage_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Stage_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The technical company supplying the stage</inlineHelpText>
    <label>Stage Supplier</label>
    <referenceTo>Technical_Supplier__c</referenceTo>
    <relationshipLabel>Booking Forms (Stage Supplier)</relationshipLabel>
    <relationshipName>Booking_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>