force-app/main/default/objects/Booking_Form__c/fields/Technical_fee__c.field-meta.xml
<CustomField>
    <fullName>Technical_fee__c</fullName>
    <formula>IF(ISPICKVAL(Sound_supplied_by__c,&apos;Kunstenaar&apos;),
Total_Technical_fees__c - (Total_Technical_fees__c * Discount_Technical__c ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Final Technical Fee after discounts have been applied</inlineHelpText>
    <label>Technical Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>