force-app/main/default/objects/Booking_Form__c/fields/Technical_Fee_Incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Technical_Fee_Incl_VAT__c</fullName>
    <formula>VAT_on_Technical_Fee__c +  Technical_fee__c + Technical_Travel_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Technical fee including VAT</inlineHelpText>
    <label>Technical Fee Incl VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>