force-app/main/default/objects/Booking_Form__c/fields/Technical_Fee_Notes__c.field-meta.xml
<CustomField>
    <fullName>Technical_Fee_Notes__c</fullName>
    <description>Accommodation and meal info for technical team</description>
    <label>Technical Fee Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>