force-app/main/default/objects/Booking_Form__c/fields/Technical_Travel_Costs__c.field-meta.xml
<CustomField>
    <fullName>Technical_Travel_Costs__c</fullName>
    <formula>IF(Include_Technical_Travel_Fee__c,  Artist_Travel_Costs__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Technical travel fees. If Artist travel with crew, this amount is 0, and all travel costs are paid by die the artist</inlineHelpText>
    <label>Technical Travel Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>