force-app/main/default/objects/Booking_Form__c/fields/Ticket_Prices__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Prices__c</fullName>
    <label>Ticket Prices</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>