force-app/main/default/objects/Booking_Form__c/fields/Ticket_Prices_on_website__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Prices_on_website__c</fullName>
    <label>Ticket Prices on website</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>