force-app/main/default/objects/Booking_Form__c/fields/Time_doors_open__c.field-meta.xml
<CustomField>
    <fullName>Time_doors_open__c</fullName>
    <label>Time doors open</label>
    <length>255</length>
    <type>Text</type>
</CustomField>