force-app/main/default/objects/Booking_Form__c/fields/Time_of_soundcheck__c.field-meta.xml
<CustomField>
    <fullName>Time_of_soundcheck__c</fullName>
    <inlineHelpText>What time is the Artist&apos;s soundcheck ?</inlineHelpText>
    <label>Time of soundcheck</label>
    <length>255</length>
    <type>Text</type>
</CustomField>