force-app/main/default/objects/Booking_Form__c/fields/Total_Excl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Excl_VAT__c</fullName>
    <formula>Performance_Fee__c +  Technical_Travel_Costs__c +  Artist_Travel_Costs__c +  Technical_fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Quoted Total Excluding VAT</inlineHelpText>
    <label>Total Excl VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>