force-app/main/default/objects/Booking_Form__c/fields/Total_Incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Incl_VAT__c</fullName>
    <formula>Total_Excl_VAT__c + Total_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Total Performance, Travel and Technical Fees Incl VAT</inlineHelpText>
    <label>Total Incl VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>