force-app/main/default/objects/Booking_Form__c/fields/Total_Performance_Fees_Before_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Performance_Fees_Before_Discount__c</fullName>
    <inlineHelpText>The total performance fee for all dates associated with this booking fee. The amount is rolled up from the Booking Form Fee Definitions</inlineHelpText>
    <label>Total Performance Fees (Before Discount)</label>
    <summarizedField>Booking_Form_Fee_Definition__c.Performance_Fee__c</summarizedField>
    <summaryForeignKey>Booking_Form_Fee_Definition__c.Booking_Form__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>