force-app/main/default/objects/Booking_Form__c/fields/Total_Technical_fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Technical_fees__c</fullName>
    <inlineHelpText>This is the total amount for technical fees for all dates associated with this booking form. It is rolled up from the Booking Form Fee Definitions</inlineHelpText>
    <label>Total Technical fees</label>
    <summarizedField>Booking_Form_Fee_Definition__c.Technical_Fee__c</summarizedField>
    <summaryForeignKey>Booking_Form_Fee_Definition__c.Booking_Form__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>