force-app/main/default/objects/Booking_Form__c/fields/Total_Travel_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Travel_Fee__c</fullName>
    <formula>Artist_Travel_Costs__c + Technical_Travel_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total Quoted Travel Fee</inlineHelpText>
    <label>Total Travel Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>