force-app/main/default/objects/Booking_Form__c/fields/Total_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_VAT__c</fullName>
    <formula>IF( VAT_Applicable__c ,
			IF(TODAY() &lt; DATE(2025,5,1), Total_Excl_VAT__c * $Setup.VocalEventsSettings__c.VAT__c,
Total_Excl_VAT__c * IF( Date_of_Performance__c &lt; DATE(2025, 5, 1), 
$Setup.VocalEventsSettings__c.VAT__c,
$Setup.VocalEventsSettings__c.VAT_Post_May_2025__c )),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Amount of VAT payable</inlineHelpText>
    <label>Total VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>