force-app/main/default/objects/Booking_Form__c/fields/Town_Name__c.field-meta.xml
<CustomField>
    <fullName>Town_Name__c</fullName>
    <description>Displays the Town Name. Used for Calendars</description>
    <formula>Town_or_City__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Town Name</label>
    <type>Text</type>
</CustomField>