force-app/main/default/objects/Booking_Form__c/fields/Town_or_City__c.field-meta.xml
<CustomField>
    <fullName>Town_or_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Town or City Where this performance will take place</description>
    <label>Town or City</label>
    <referenceTo>Town__c</referenceTo>
    <relationshipLabel>Booking Forms</relationshipLabel>
    <relationshipName>Booking_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>