force-app/main/default/objects/Booking_Form__c/fields/Travel_fee_not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Travel_fee_not_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if travel fees do not apply for this performance, eg a doordeal show.</inlineHelpText>
    <label>Travel fee not Applicable</label>
    <type>Checkbox</type>
</CustomField>