force-app/main/default/objects/Booking_Form__c/fields/Travelling_By__c.field-meta.xml
<CustomField>
    <fullName>Travelling_By__c</fullName>
    <defaultValue>&quot;Road&quot;</defaultValue>
    <description>The mode of transport used</description>
    <label>Travelling By</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air</fullName>
                <default>true</default>
                <label>Air</label>
            </value>
            <value>
                <fullName>Road</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>