force-app/main/default/objects/Booking_Form__c/fields/Travelling_Distance__c.field-meta.xml
<CustomField>
    <fullName>Travelling_Distance__c</fullName>
    <description>The Distance the artist must travel to the Performance</description>
    <label>Travelling Distance</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>