force-app/main/default/objects/Booking_Form__c/fields/Travelling_From__c.field-meta.xml
<CustomField>
    <fullName>Travelling_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The town the artist will be travelling from to get to the Performance</description>
    <label>Travelling From</label>
    <referenceTo>Town__c</referenceTo>
    <relationshipLabel>Booking Forms (Travelling From)</relationshipLabel>
    <relationshipName>Booking_Forms_Travelling_From</relationshipName>
    <type>Lookup</type>
</CustomField>