force-app/main/default/objects/Booking_Form__c/fields/Trip_Duration__c.field-meta.xml
<CustomField>
    <fullName>Trip_Duration__c</fullName>
    <inlineHelpText>How many hours drive is the trip to the venue ?</inlineHelpText>
    <label>Trip Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>