force-app/main/default/objects/Booking_Form__c/fields/Type_of_Venue__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Venue__c</fullName>
    <description>Indoor or outdoor</description>
    <label>Type of Venue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Venue</valueSetName>
    </valueSet>
</CustomField>