force-app/main/default/objects/Booking_Form__c/fields/VAT_Applicable__c.field-meta.xml
<CustomField>
    <fullName>VAT_Applicable__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This box is checked if VAT should be charged on this booking</inlineHelpText>
    <label>VAT Applicable</label>
    <type>Checkbox</type>
</CustomField>