force-app/main/default/objects/Booking_Form__c/fields/VAT_on_Performance_and_Travel_Fee__c.field-meta.xml
<CustomField>
    <fullName>VAT_on_Performance_and_Travel_Fee__c</fullName>
    <formula>IF( VAT_Applicable__c,
(Artist_Travel_Costs__c + Performance_Fee__c )*  $Setup.VocalEventsSettings__c.VAT__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The VAT charged for the Performance and Travel</inlineHelpText>
    <label>VAT on Performance and Travel Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>