force-app/main/default/objects/Booking_Form__c/fields/VAT_on_Technical_Fee__c.field-meta.xml
<CustomField>
    <fullName>VAT_on_Technical_Fee__c</fullName>
    <formula>IF( VAT_Applicable__c,
(Technical_Travel_Costs__c + Technical_fee__c) * $Setup.VocalEventsSettings__c.VAT__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>VAT Charged on the Technical Fee</inlineHelpText>
    <label>VAT on Technical Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>