force-app/main/default/objects/Booking_Form__c/fields/Vocal_Events_Commission__c.field-meta.xml
<CustomField>
    <fullName>Vocal_Events_Commission__c</fullName>
    <description>Used in reporting</description>
    <formula>Eligible_Performance_Fee__c *  Artist__r.Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vocal Events Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>