force-app/main/default/objects/Booking_Form__c/fields/Where_are_meals_served__c.field-meta.xml
<CustomField>
    <fullName>Where_are_meals_served__c</fullName>
    <inlineHelpText>Where and when will the artist and crew meals be served ?</inlineHelpText>
    <label>Where and when are meals served ?</label>
    <type>TextArea</type>
</CustomField>