force-app/main/default/objects/Booking_Form__c/fields/Where_can_tickets_be_purchased__c.field-meta.xml
<CustomField>
    <fullName>Where_can_tickets_be_purchased__c</fullName>
    <label>Where can tickets be purchased</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>