force-app/main/default/objects/Booking_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Performance__c</columns>
    <columns>Date_Contract_Signed__c</columns>
    <columns>Deposit_Paid__c</columns>
    <columns>Balance_Paid__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Agent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>