force-app/main/default/objects/Booking_Form__c/listViews/Appel.listView-meta.xml
<ListView>
    <fullName>Appel</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Performance__c</columns>
    <columns>Deposit_Paid__c</columns>
    <columns>Date_Contract_Signed__c</columns>
    <columns>Balance_Paid__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Artist__c</field>
        <operation>equals</operation>
        <value>Appel</value>
    </filters>
    <label>Appel</label>
</ListView>