force-app/main/default/objects/Booking_Form__c/listViews/MARNO_VD_MERWE.listView-meta.xml
<ListView>
    <fullName>MARNO_VD_MERWE</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Performance__c</columns>
    <columns>Deposit_Paid__c</columns>
    <columns>Date_Contract_Signed__c</columns>
    <columns>Balance_Paid__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Artist__c</field>
        <operation>equals</operation>
        <value>MARNO VD MERWE</value>
    </filters>
    <label>MARNO VD MERWE</label>
</ListView>