force-app/main/default/objects/Booking_Form__c/listViews/Ricus_Liza_Nel.listView-meta.xml
<ListView>
    <fullName>Ricus_Liza_Nel</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Performance__c</columns>
    <columns>Deposit_Paid__c</columns>
    <columns>Date_Contract_Signed__c</columns>
    <columns>Balance_Paid__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Ricus Nel + Liza Nel</value>
    </filters>
    <label>Ricus &amp; Liza Nel</label>
</ListView>